--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'hehebo'
+include ':react-native-toast'
+project(':react-native-toast').projectDir = new File(settingsDir, '../node_modules/@remobile/react-native-toast/android')
+
 include ':react-native-splash-screen'
 project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
 
